# research_ptm-reuse-through-academic-transactions

./: .gitignore  OA_Citing_PM.json  PM_Citing_OA.json  README.md  pyproject.toml
data/: README.md
data/abstracts/: HRNet.abstracts  ResNeXt.abstracts  Transformer-XL.abstracts  hrnet.abstracts  mae.abstracts  resnext.abstracts
data/json/: HRNet.json  MAE.json  ResNeXt.json  Transformer-XL.json  ai_nature_classes.json
data/pickle/: pmArXivCitations.pickle
src/: __init__.py  main.py  stats.py  tk_FilePicker.py
src/components/: __init__.py  filepicker.py
src/stats/: __init__.py  ai.py  plot.py  stats.py
