[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
