[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
progress = "^1.6"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
click = "^8.1.7"
humanize = "^4.9.0"
langchain-community = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
